# HSE_MLOps_HW_1

./: .gitignore  Dockerfile  README.md  README.txt  docker-compose.yml  pyproject.toml  test_client.py
app/: __init__.py  main.py
app/models/: __init__.py  base.py  implementations.py  registry.py
app/schemas/: api_schemas.py
app/storage/: __init__.py  dataset_storage.py  model_storage.py  s3_storage.py
app/tracking/: mlflow_tracker.py
app/utils/: logger.py
dashboard/: streamlit_app.py
scripts/: init_minio.sh
tests/: __init__.py  test_api.py  test_models.py
