[tool.poetry]
name = "mlops-api"
version = "0.1.0"
description = "MLOps REST API for training and serving ML models"
authors = ["Belonovskaya Kristina Konstantinovna"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
pydantic = "^2.5.0"
streamlit = "^1.28.2"
joblib = "^1.3.2"
s3fs = {extras = ["boto3"], version = "^2025.12.0"}
minio = "^7.2.20"
dvc = "^3.64.1"
dvc-s3 = "^3.2.2"
mlflow = "^3.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

